test_programs/compile_failure/associated_type_in_impl_trait_generic/src/main.nr
trait Trait {
    type T;
}

impl Trait<T = i32> for bool {
}

fn main() {}